--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,16 @@
         "ecmaVersion": 2018
     },
     "root": true,
+    "plugins": [
+        "node"
+    ],
+    "settings": {
+        "node": {
+            "allowModules": [],
+            "resolvePaths": [],
+            "tryExtensions": []
+        }
+    },
     "rules": {
         // Possible Errors Section Start
         "for-direction": "error",
@@ -567,8 +577,48 @@
         "yield-star-spacing": [
             "error",
             "before"
-        ]
+        ],
         // ECMAScript 6 Section End
+        // Eslint Plugin Node Start
+        // Possible Errors Section Start
+        "node/no-callback-literal": "error",
+        "node/no-exports-assign": "error",
+        "node/no-extraneous-import":  "error",
+        "node/no-extraneous-require":  "error",
+        "node/no-missing-import": "error",
+        "node/no-missing-require": "error",
+        "node/no-unpublished-bin": "error",
+        "node/no-unpublished-import": "error",
+        "node/no-unpublished-require": "error",
+        "node/no-unsupported-features/es-builtins": "error",
+        "node/no-unsupported-features/es-syntax": "error",
+        "node/no-unsupported-features/node-builtins": "error",
+        "node/process-exit-as-throw": "error",
+        "node/shebang": "error",
+        // Possible Errors Section End
+        // Best Practices Section Start
+        "node/no-deprecated-api": "error",
+        // Best Practices Section End
+        // Stylistic Issues Section Start
+        "node/exports-style": [
+            "error",
+            "module.exports"
+        ],
+        "node/file-extension-in-import": [
+            "error",
+            "never"
+        ],
+        "node/prefer-global/buffer": "error",
+        "node/prefer-global/console": "error",
+        "node/prefer-global/process": "error",
+        "node/prefer-global/text-decoder": "error",
+        "node/prefer-global/text-encoder": "error",
+        "node/prefer-global/url-search-params": "error",
+        "node/prefer-global/url": "error",
+        "node/prefer-promises/dns": "error",
+        "node/prefer-promises/fs": "error"
+        // Stylistic Issues Section End
+        // Eslint Plugin Node End
     },
     "noInlineConfig": true
 }
