--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "name": "hn-server-template",
     "version": "1.0.0",
+    "engines": {
+        "node": ">=12.18.3"
+    },
     "description": "Template for server applications of HN products.",
     "main": "bin/www.js",
     "scripts": {
@@ -10,6 +13,7 @@
     "license": "MIT",
     "devDependencies": {
         "eslint": "~7.7.0",
+        "eslint-plugin-node": "~11.1.0",
         "nodemon": "~2.0.4"
     }
 }
