--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "devDependencies": {
         "eslint": "~7.7.0",
         "eslint-plugin-node": "~11.1.0",
+        "husky": "~4.2.5",
         "nodemon": "~2.0.4"
     }
 }
