--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "eslint-plugin-node": "~11.1.0",
         "husky": "~4.2.5",
         "nodemon": "~2.0.4"
+    },
+    "dependencies": {
+        "express": "~4.17.1"
     }
 }
