--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "description": "Template for server applications of HN products.",
     "main": "bin/www.js",
     "scripts": {
-        "start": "nodemon bin/www.js"
+        "start": "SET \"DEBUG=express:*\"&& nodemon bin/www.js"
     },
     "author": "HN Software",
     "license": "MIT",
