--- a/package.json
+++ b/package.json
@@ -7,15 +7,24 @@
     "description": "Template for server applications of HN products.",
     "main": "bin/www.js",
     "scripts": {
-        "start": "SET \"DEBUG=express:*\"&& nodemon bin/www.js"
+        "start": "SET \"DEBUG=express:*\"&& nodemon bin/www.js",
+        "test": "mocha"
     },
     "author": "HN Software",
     "license": "MIT",
     "devDependencies": {
+        "chai": "~4.2.0",
+        "chai-as-promised": "~7.1.1",
         "eslint": "~7.7.0",
+        "eslint-plugin-chai-friendly": "~0.6.0",
+        "eslint-plugin-mocha": "~8.0.0",
         "eslint-plugin-node": "~11.1.0",
         "husky": "~4.2.5",
-        "nodemon": "~2.0.4"
+        "mocha": "~8.1.1",
+        "nodemon": "~2.0.4",
+        "proxyquire": "~2.1.3",
+        "sinon": "~9.0.3",
+        "sinon-chai": "~3.5.0"
     },
     "dependencies": {
         "express": "~4.17.1"
