--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "scripts": {
         "start": "SET \"DEBUG=express:*\"&& nodemon bin/www.js",
         "test": "mocha",
+        "coverage": "nyc mocha --global __coverage__",
         "lint": "eslint ."
     },
     "author": "HN Software",
@@ -23,6 +24,7 @@
         "husky": "~4.2.5",
         "mocha": "~8.1.1",
         "nodemon": "~2.0.4",
+        "nyc": "~15.1.0",
         "proxyquire": "~2.1.3",
         "sinon": "~9.0.3",
         "sinon-chai": "~3.5.0"
