Install and use helmet package

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "sinon-chai": "~3.5.0"
     },
     "dependencies": {
-        "express": "~4.17.1"
+        "express": "~4.17.1",
+        "helmet": "~4.1.1"
     }
 }
