--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     },
     "dependencies": {
         "express": "~4.17.1",
+        "express-rate-limit": "~5.1.3",
         "helmet": "~4.1.1"
     }
 }
