--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dependencies": {
         "express": "~4.17.1",
         "express-rate-limit": "~5.1.3",
-        "helmet": "~4.1.1"
+        "helmet": "~4.1.1",
+        "http-status-codes": "~2.1.4"
     }
 }
